# wordle_solver

./: Cargo.toml  README.md
resources/: words.txt  words_5_chars.txt  words_all.txt
src/: config.rs  main.rs
